Remove back-end details download (eager and lazy)
